--- a/README
+++ b/README
@@ -2,3 +2,6 @@ This is your new Play 2.0 application
 =====================================
 
 This file will be packaged with your application, when using `play dist`.
+
+App deployed on mycf.cloudfoundry.com
+
