--- a/README
+++ b/README
@@ -4,3 +4,4 @@ App is under development.
 
 App deployed on logviewer.cloudfoundry.com
 
+App behaves differently on FireFox from Chrome. So Run in Both.
